--- a/catch-of-the-day/src/css/_animations.styl
+++ b/catch-of-the-day/src/css/_animations.styl
@@ -6,58 +6,62 @@
 */
 
 
+//
+//.order-enter
+//  background red
+//  transform: translateX(-120%)
+//  transition 0.5s
+//  &.order-enter-active
+//    background yellow
+//    transform: translateX(0)
+//
+//.order-exit
+//  background thistle
+//  transition 5s
+//  transform: translateX(0)
+//  &.order-exit-active
+//    background palegoldenrod
+//    transform: translateX(120%)
+
 
 .order-enter
   background red
-  transform: translateX(-120%)
-  transition 5s
+  transform: translateX(-120%) rotate(0)
+  transition 0.5s
+  max-height: 0
+  padding 0 !important
   &.order-enter-active
     background yellow
-    transform: translateX(0)
+    max-height 60px
+    transform: translateX(0) rotate(1440deg)
+    padding 2rem 0 !important
 
 .order-exit
   background thistle
   transition 5s
   transform: translateX(0)
+  max-height 60px
   &.order-exit-active
     background palegoldenrod
     transform: translateX(120%)
+    padding: 0
 
 
+.count-enter
+  background: red
+  transition .5s
+  transform translateY(100%)
+  &.count-enter-active
+    background: yellow
+    transform translateY(0)
 
-//.order-enter
-//  transform: translateX(-120%)
-//  transition 0.5s
-//  max-height: 0
-//  padding 0 !important
-//  &.order-enter-active
-//    max-height 60px
-//    transform: translateX(0)
-//    padding 2rem 0 !important
-//
-//.order-exit
-//  transition 0.5s
-//  transform: translateX(0)
-//  &.order-exit-active
-//    transform: translateX(120%)
-//    padding: 0
-//
-//
-//.count-enter
-//  background: red
-//  transition .5s
-//  transform translateY(100%)
-//  &.count-enter-active
-//    background: yellow
-//    transform translateY(0)
-//
-//.count-exit
-//  background: black
-//  transform translateY(0)
-//  transition .5s
-//  position absolute
-//  left 0
-//  bottom 0
-//  &.count-exit-active
-//    background green
-//    transform translateY(-100%) scale(3)
+.count-exit
+  background: black
+  transform translateY(0)
+  transition .5s
+  position absolute
+  left 0
+  bottom 0
+  &.count-exit-active
+    background green
+    transform translateY(-100%) scale(1)
