--- a/catch-of-the-day/src/css/style.css
+++ b/catch-of-the-day/src/css/style.css
@@ -1,14 +1,18 @@
 .order-enter {
   background: #f00;
-  -webkit-transform: translateX(-120%);
-          transform: translateX(-120%);
-  -webkit-transition: 5s;
-  transition: 5s;
+  -webkit-transform: translateX(-120%) rotate(0);
+          transform: translateX(-120%) rotate(0);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  max-height: 0;
+  padding: 0 !important;
 }
 .order-enter.order-enter-active {
   background: #ff0;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  max-height: 60px;
+  -webkit-transform: translateX(0) rotate(1440deg);
+          transform: translateX(0) rotate(1440deg);
+  padding: 2rem 0 !important;
 }
 .order-exit {
   background: #d8bfd8;
@@ -16,11 +20,40 @@
   transition: 5s;
   -webkit-transform: translateX(0);
           transform: translateX(0);
+  max-height: 60px;
 }
 .order-exit.order-exit-active {
   background: #eee8aa;
   -webkit-transform: translateX(120%);
           transform: translateX(120%);
+  padding: 0;
+}
+.count-enter {
+  background: #f00;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+}
+.count-enter.count-enter-active {
+  background: #ff0;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+.count-exit {
+  background: #000;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.count-exit.count-exit-active {
+  background: #008000;
+  -webkit-transform: translateY(-100%) scale(1);
+          transform: translateY(-100%) scale(1);
 }
 @font-face {
   font-family: "haymakerregular";
